<resources>
    <string name="app_name">DesignInsurance</string>
    <string name="album">البوم صور</string>
    <string name="company_job">مهمة الشركة</string>
    <string name="insurancePackage">حزم تأمينية</string>
    <string name="about_us">من نحن</string>
    <string name="emp">طلب توظيف</string>
    <string name="call_us">اتصل بنا</string>
    <string name="locations">الفروع</string>
    <string name="emergency_numbers">أرقام الطوارئ</string>
    <string name="help">مساعدة</string>
    <string name="report">التبليغ عن مخالفات</string>
    <string name="company_goals">أهداف الشركة</string>
    <string name="special">ماذا يميزنا</string>
    <string name="our_message">رسالتنا</string>
    <string name="our_vision">رؤيتنا</string>
    <string name="our_mangment">أدارتنا ومساهمينا</string>
    <string name="aboutUs">عن العالمية</string>
    <string name="mangment">ادارة الشركة</string>
    <string name="executive_management">الادارة التنفيذية</string>
    <string name="board_directors">مجلس الادارة</string>
    <string name="senior_shareholders">كبار المساهمين</string>
    <string name="insuranceEng"> تأمين هندسي</string>
    <string name="our_messagetext">

        تسعى الشركة العالمية المتحدة للتامين لأن تكون الشركة الرائدة في السوق من خلال الجمع ما بين المهارات المهنية والموارد البشرية مع التركيز على خدمة العملاء لتحقيق الخدمة المتميزة.
\n
 تسعى الشركة العالمية المتحدة للتامين لتوفير مجموعة كاملة من المنتجات مع درجة عالية من الخدمة.
\n
تسعى الشركة العالمية المتحدة للتامين لتقديم أداء أمثل في خدمة العملاء المحليين عن طريق تقديم خدمات التأمين الإقليمية والدولية والحلول البديلة .
\n
 الصدق في التعامل مع الجمهور .

\n
  المساهمة في دعم وتنمية وبناء الإقتصاد الوطني .
\n
  توفير فرص عمل لأكبر عدد ممكن من الأيدي العاملة الوطنية .
\n
    </string>
    <string name="our_vision_text">
        تقوم رؤية  الشركة العالمية المتحدة للتامين إلى تلبية الطلب المتزايد على التأمين في المنطقة كما ويكرس فريقنا طاقاته لتقديم خدمات متميزة والحماية من المخاطر على أوسع نطاق ممكن.
\n
نحن في الشركة العالمية المتحدة للتامين نسعى لأن نكون شركاء حقيقيين و فاعلين لزبائننا لإدارة الأخطار المحيطة بأعمالهم، وأردنا أن نكون الأكثر فاعلية في بناء صناعة تأمين رائدة في وطننا، هذا التزاماً منا ووفاءً لبلدنا و مواطنينا، فقد جمعنا أعرق الخبرات و درسنا تجارب الآخرين لأننا ساعين إلى التميز و التفوق.
\n
إن احتياجات الناس دائما في تغير مستمر و لمواجهة هذه التغيرات، وجدنا لزاماً علينا تكييف خدماتنا وفقاً لذلك من خلال ابتكار الحلول الفنية اللازمة و تقديم التأمينات التي تتماشى مع تلك التغيرات. فلأننا نهتم بكم فدعونا نخطط معا لحماية أكثر لعائلاتكم، منازلكم، وممتلكاتكم
 \n
    </string>
<string name="about_international">


    شركة العالمية المتحدة للتامين ,شركة مساهمة عامة فلسطينية أسست من قبل مجموعة من رجال الأعمال ذوي الخبرات العريقة في صناعة التأمين.
    \n
سجلت الشركة لدى وزارة الاقتصاد الوطني كشركة مساهمة عامة فلسطينية تحت رقم  (562601302) برأس مال وقدره 5,000,000 دولار أمريكي, وقد حصلت الشركة على رخصة مزاولة المهنة من هيئة سوق رأس المال الفلسطينية تحت رقم (11) بتاريخ 15/4/2010، ليصبح رأس مالها الحالي 8,000,000 دولار أمريكي.  n\
يمتد نشاط الشركة العالمية المتحدة للتامين اليوم على خارطة الوطن الفلسطيني من الشمال الى الجنوب وذلك من خلال فروعها ومكاتبها ووكلائها.
    \n
وفي إطار التطور ومواكبة التغيرات الاقتصادية والسياسية التي تمر بها المنطقة وضعت الشركة خطة استراتيجية واضحة طويلة الأمد ....فهي تعمل بكل جهد وعزيمة للمشاركة بالنهوض بسوق التأمين الفلسطيني والارتقاء بصناعة التأمين في فلسطين , ولأجل ذلك حرصت العالمية المتحدة للتأمين على تقديم خدماتها على أعلى المستويات وعقدت اتفاقيات إعادة تأمين بقيادة معيدين من الدرجة الاولى وبطاقة استيعابية عالية ,كما تم استقطاب وتعيين فريق متمرس من الخبراء في صناعة التامين المحلي والعربي والعالمي.
\n
</string>
    <string name="managers">
       <i>  لسيد جمال نايف براهمه</i>
                \n
رئيس مجلس الادارة و الرئيس التنفيذي
                \n\n

السيد تحسين نايف براهمه
                \n

نائب الرئيس التنفيذي

 \n \n


 السيد نبيل محمد عباسي
        \n

مساعد الرئيس التنفيذي للعمليات الفنية

 \n\n

السيد محمود أنيس سحويل
        \n

مساعد الرئيس التنفيذي للشؤون المالية والإدارية
    \n\n

السيد فريد محمد ملايشة
        \n

مدير العمليات التنفيذي لشؤون الحوادث
         \n\n

السيد خير الدين براهمه
        \n

المدير الإقليمي لمنطقة الشمال
 \n\n


السيد رامي على شاهين
        \n

المدير الإقليمي لمنقطة الجنوب
 \n\n


السيد محمد يوسف أبو ناهية
        \n

المدير الاقليمي لقطاع غزه
    \n\n



السيد صلاح أحمد الميمي
        \n

مدير دائرة الأعمال / خدمة الزبائن
       \n\n



 السيد عبد الرحمن عيسى الخالدي
        \n

مدير دائرة التدقيق الداخلي
       \n\n



السيد صبري محمد طليب
        \n

المدير المالي
       \n\n



السيد عبداللطيف سمير حسن
        \n

مدير دائرة تكنولوجيا المعلومات

       \n\n




السيد زيد ثابت عبدالحليم
        \n

 مدير دائرة التسويق- رام الله

       \n\n

السيد صائب عزمي الخواجا

        \n
مدير دائرة الموارد البشرية

       \n\n


السيد رائد يوسف صلاحات
        \n

مدير دائرة اكتتاب المركبات

       \n\n


السيدة رنا جودت الشنار
        \n

مديرة دائرة التأمين الصحي

       \n\n


السيدة أحلام ربحي العبد
        \n

مديرة دائرة العلاقات العامة

       \n\n


السيد عدنان أسعد درويش
        \n

مدير دائرة تعويضات التأمينات العامة
       \n\n



السيد صالح عناد الفارس
        \n

مدير دائرة إعادة التأمين
       \n\n



السيدة رؤى الداوود
        \n

مديرة دائرة الشؤون القانونية
       \n\n



السيدة ديما محمد عطالله
        \n

مسؤول دائرة تأمين الحياة
       \n\n


    </string>
    <string name="jamal">السيد / جمال نايف براهمة رئيس مجلس الإدارة و الرئيس التنفيذي</string>
    <string name="insuranceEngsubtitle">يتكون تأمين المركبات من ثلاثة أنواع رئيسية كما يلي:</string>
    <string name="insuranceEngInfo">الإلزامي :  وهو إجباري, ويخضع لبنود قانون التأمين الفلسطيني رقم (20) لسنة 2005 وهو يغطي الإصابات الجسدية داخل المركبة المؤمن عليها ( السائق و الركاب ) و/أو الإصابات الجسدية خارج المركبة (المشاة) بغض النظر عن مسؤولية السائق أو عدمها في الحادث وتكون مسؤولية شركة التأمين وفقا للقانون غير محددة.</string>
<string name="insuranceInfo2">
    التامين الهندسي


وثيقة تأمين أخطار المقاوليين

يضمن هذا التأمين تعويض المالك و/أو المقاول الرئيسي و/أو مقاولي الباطن (شريطة ذكرهم صراحة بطلب التأمين) عم أي خسارة أو ضرر مادي غير متوقع ومفاجئ وبما لا يتجاوز قيمة المشروع وقسط التأمين وفي حال وجود معدات و/أو تجهيزات لازمة للإنشاء ملك المالك و/أو المقاول تكون مغطاة شريطة أن تكون مذكورة صراحة وبقيمتها بطلب التأمين, يمكن تمديد التغطية لتشمل مصاريف أزالة الأنقاض وكذلك المسؤولية القانونية تجاه الطرف الثالث والناتجة عن تنفيذ أعمال المقاولة وذلك حدود مبلغ معين يتم تحديده بالوثيقة





وثيقة تأمين جميع أخطار المعدات / الآلات الإنشائية للمقاولين

تغطي هذه الوثيقة آلات ومعدات المقاول أثناء تواجدها بموقع العمل ضد جميع الأخطار التي قد تحدث بشكل مفاجئ وغير متوقع خلال فترة التأمين





وثيقة تأمين عطل الماكينات

تغطي هذه الوثيقة الأضرار والخسائر المادية للمعدات والمكائن المغطاة بالتأمين نتيجة حادث مفاجئ غير متوقع للمعدة أثناء عملها أو فترة صيانتها, الأمر الذي يؤدي إلى ضرورة إصلاحها أو استبدالها حيث يكون للشركة حق الاختيار إما دفع قيمة الخسارة نقدا أو استبدالها أو تصليحها بحد أعلى لا يتجاوز مبلغ الآلة أو المعدة المؤمن عليها بالبوليصة





وثيقة تأمين جميع أخطاء التركيب

يغطي هذا النوع من التأمين قيمة أعمال المقاولة (قيمة العقد) ضد جميع أخطاء التركيب التي قد تحدث بشكل مفاجئ وغير متوقعة وينتج عنها خسارة مادية للمقاول الرئيسي أو مقاولي الباطن وذلك أثناء تشييد وتركيب وتنصيب المعدات أو خطوط الإنتاج أو المصانع أو المحطات وذلك في حدود مبلغ التأمين المحدد بجدول الوثيقة, كما قد يمتد التأمين ليشمل المسؤولية القانونية تجاه الطرف الثالث والناتجة عن أعمال التركيب وذلك في حدود مبالغ معينة (سواء أضرار مادية أو إصابات جسمانية للغير)



</string>
    <string name="video_help">فيديو كيفية تقديم الطلب</string>
    <string name="cancel_insurance_help">كيفية الغاء عقد التأمين</string>
    <string name="tahseen">السيد / تحسين نايف براهمة نائب الرئيس التنفيذي</string>
    <string name="nabeel">السيد / نبيل محمد عباسي مساعد الرئيس التنفيذي للعمليات الفنية</string>
    <string name="mahmoud">  السيد / محمود أنيس سحويل
     مساعد الرئيس التنفيذي للشؤون المالية والإدارية  </string>
    <string name="insurance_thirdparty">تأمين الفريق الثالث (ضد الغير) : وهو إجباري, وتخضع تغطياته لشروط وثيقة التأمين الموحدة الصادرة عن الإدارة العامة للتأمين, ويغطي هذا النوع من التأمين مسؤولية المؤمن له أو سائق المركبة المؤمنة عن الأضرار المادية التي تسببها المركبة للغير (الفريق الثالث) وتكون مسؤولية الشركة محددة طبقا لحدود الإلتزامات المشار إليها في وثيقة التأمين.</string>
    <string name="full_insurance">تأمين الشامل أو التكميلي (جسم المركبة) :  وهو اختياري, وتخضع تغطياته لشروط وثيقة التأمين الصادرة عن الشركة, وهو يغطي الهلاك أو التلف الكلي أو الجزئي الذي يصيب المركبة المؤمن عليها نتيجة حادث اصطدام أو حريق أو سرقة. وبمعنى آخر تقوم شركة التأمين بتعويض المؤمن له عن أي خسارة تنتج عن فقدان أو تلف جزئي أو كلي للمركبة في حالة تحقق الخطر أو عندما يحدث حادث للمركبة المؤمن عليها تمكنه من إصلاح مركبته وإعادتها إلى حالتها التي كانت عليها قبل الحادث أو تمكنه من شراء أخرى مماثلة, وتكون مسؤولية الشركة محددة بحدود المبلغ المؤمن عليه كحد أقصى.</string>
    <string name="saywhatyouwant">فش خلقك</string>
    <string name="MarineInsuranceTitle">
التامين البحري

    </string>
    <string name="MarineInsuranceSubTitle">
        وثيقة التأمين البحري


    </string>
    <string name="MarineInsurance">
        شمل هذا التأمين كافة أخطار الفقدان أو التلف التي تصيب البضائع المؤمن عليها (فيما عدا ما هو مستثنى بالوثيقة) أثناء شحن البضائع بحرا أو جوا أو برا ويبدأ عادة مفعول هذا التأمين من وقت خروج البضائع من المستودع أو محل التخزين في مكان بدء النقل المسمى في الوثيقة ويستمر خلال عملية النقل الاعتيادية وينتهي عند التسليم في مستودع المرسل إليه المسمى في الوثيقة أو عند التسليم في أي مستودع آخر سواء كان قبل أو في مكان الوصول المسمى في الوثيقة والذي يختاره المؤمن وذلك للتخزين فيه عبر مستلزمات النقل الاعتيادي أو لفرز البضاعة أو توزيعها

    </string>
    <string name="accountNumberS">رقم الحساب</string>
    <string name="emergencycontent">

        المقر الرئيسي

نابلس، شارع فيصل ص.ب : 1001
            \n
هاتف: 2390919 - 09
            \n
        فاكس: 2390920 - 09

 \n    \n

مركز العمليات -  رام الله

البيرة، شارع نابلس
        \n
        ص.ب : 1000 رام الله
            \n
هاتف: 2968888 - 02
            \n
        فاكس: 2968889 - 02

        \n
    \n
فرع بيت لحم
            \n
بيت لحم ، شارع الكركفة
            \n
هاتف: 2746662 - 02
            \n
        فاكس: 2746622 - 02
\n
    \n

فرع الخليل
الخليل، طريق دائرة السير
            \n
 هاتف: 2217585 - 02
            \n
        فاكس: 022217584 -



\n    \n
فرع دورا
    \n
خليل، طريق دائرة السير
    \n
هاتف: 02-2217585 ,
            \n
        فاكس: 02-2217584
    \n

\n
            \n
فرع غزة
غزة، شارع الصناعة بجانب محافظة غزة
        \n
هاتف: 2882931 - 08
            \n
        فاكس: 2882932 - 08

\n

    \n
فرع جنين
جنين، شارع حيفا
            \n
            \n
هاتف: 2436812 - 04
            \n
        فاكس: 2436811 - 04
    \n

    \n
فرع طولكرم
طولكرم، مجمع الجمال التجاري
        \n
هاتف : 2681777 - 09
        \n
        فاكس : 2681776 - 09

 \n
    \n
فرع قلقيلية
قلقيلية، عمارة رفيق نزال
        \n
هاتف: 2944320 - 09
        \n
        فاكس: 2944322 - 09



 \n
    \n
فرع طوباس
طوباس، الشارع الرئيسي
\n
هاتف: 09-2571360
            \n
        فاكس: 09-2571361

 \n
    \n
فرع أريحا
        \n
هاتف : 022310490
            \n
        , فاكس: 022310491

 \n


\n

    </string>
    <string name="font">oredoo.ttf</string>
</resources>