<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include
        layout="@layout/app_bar"
        />



<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_below="@+id/title"
    android:id="@+id/buttonslayout"
    android:layout_gravity="center"
    android:gravity="right"
    android:layout_marginTop="70dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    tools:context="com.example.dexter.designinsurance.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:id="@+id/insuranceTitle"
        android:textColor="#a41863"
        android:text="@string/insuranceEng"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/insuranceSubTitle"
        android:text="@string/insuranceEngsubtitle"
        android:layout_marginBottom="4dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/insuranceInfo"
        android:text="@string/insuranceEngInfo"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/insuranceInfo2"

        android:text="@string/insurance_thirdparty"
        android:layout_height="wrap_content" />

       <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
           android:id="@+id/insuranceInfo3"

           android:text="@string/full_insurance"
        android:layout_height="wrap_content" />




</LinearLayout>
</RelativeLayout>
</ScrollView>