<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include
        layout="@layout/app_bar"

        />

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/buttonslayout"
    android:layout_marginRight="60dp"
    android:layout_marginLeft="60dp"
    tools:context="com.example.dexter.designinsurance.MainActivity">
    <Button
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="#9b1c56"
    android:textColor="#ffffff"
    android:text="@string/mangment"
    android:layout_height="wrap_content" />
    <Button
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="#9b1c56"
    android:textColor="#ffffff"
    android:text="@string/executive_management"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content" />
    <Button
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:textColor="#ffffff"
    android:text="@string/board_directors"
    android:background="#9b1c56"
    android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff"
        android:text="@string/senior_shareholders"
        android:background="#9b1c56"
        android:layout_height="wrap_content" />

</LinearLayout>
</RelativeLayout>
