<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include
        layout="@layout/app_bar"
        />

    <TextView
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:layout_marginTop="?attr/actionBarSize"
        android:textColor="#252424"
        android:id="@+id/title"
        android:text="@string/about_us"
        android:layout_height="wrap_content" />
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_below="@+id/title"
    android:id="@+id/buttonslayout"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginRight="50dp"
    android:layout_marginLeft="50dp"
    tools:context="com.example.dexter.designinsurance.MainActivity">
    <Button
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="#9b1c56"
    android:textColor="#ffffff"
    android:text="@string/company_job"
    android:layout_height="wrap_content" />
    <Button
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="#9b1c56"
    android:textColor="#ffffff"
    android:text="@string/company_goals"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content" />
    <Button
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:textColor="#ffffff"
    android:text="@string/special"
    android:background="#9b1c56"
    android:layout_height="wrap_content" />

</LinearLayout>
</RelativeLayout>
</ScrollView>