<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dexter.designinsurance.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/logo"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content" />
    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="110dp">
        <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_gravity="center"
            android:id="@+id/albumImg"
            android:layout_marginBottom="5dp"
            android:layout_height="70dp"
            android:src="#9b1d54"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/album_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/album"
                android:layout_marginTop="2dp"
                android:layout_gravity="center|bottom"
                android:layout_height="wrap_content" />

    </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="match_parent"
            android:layout_gravity="left"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_gravity="center"
                android:id="@+id/insurance_packageImg"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:src="#9b1d54"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/album_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/insurancePackage"
                android:layout_marginTop="2dp"
                android:layout_gravity="center|bottom"
                android:layout_height="wrap_content" />



        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:id="@+id/aboutusImage"
                android:layout_height="70dp"
                android:src="#9b1d54"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/album_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/about_us"
                android:layout_marginTop="2dp"
                android:layout_gravity="center|bottom"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="100dp">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_height="70dp"
                android:src="#9b1d54"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:scaleType="center"
                android:src="@drawable/album_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/locations"
                android:layout_marginTop="2dp"
                android:layout_gravity="center|bottom"
                android:layout_height="wrap_content" />

        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_height="70dp"
                android:src="#9b1d54"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:scaleType="center"
                android:src="@drawable/album_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/call_us"
                android:layout_marginTop="2dp"
                android:layout_gravity="center|bottom"
                android:layout_height="wrap_content" />

        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_height="70dp"
                android:src="#9b1d54"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:scaleType="center"
                android:src="@drawable/album_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/emp"
                android:layout_marginTop="2dp"
                android:layout_gravity="center|bottom"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="100dp">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_gravity="center"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:src="#9b1d54"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:layout_marginBottom="5dp"
                android:src="@drawable/album_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/report"
                android:layout_gravity="center|bottom"
                android:layout_height="wrap_content" />

        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_gravity="center"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:src="#9b1d54"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:layout_marginBottom="5dp"
                android:src="@drawable/album_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/help"
                android:layout_marginTop="2dp"
                android:layout_gravity="center|bottom"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_gravity="center"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:src="#9b1d54"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:layout_marginBottom="5dp"
                android:src="@drawable/album_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/emergency_numbers"
                android:layout_marginTop="2dp"
                android:layout_gravity="center|bottom"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>

</android.support.constraint.ConstraintLayout>
